# rust-api

./: .env  Cargo.toml
migrations/2024-07-24-152301_create_kills/: up.sql
migrations/2024-07-25-135302_add_kill_date/: up.sql
migrations/2024-07-25-234806_add_kill_fields/: up.sql
src/: db.rs  handler.rs  main.rs  routes.rs
src/discord/: discord.rs
src/domain/models/: kill.rs  mod.rs
src/handlers/: mod.rs
src/handlers/kills/: create_kill.rs  get_kill.rs  list_kills.rs  mod.rs
src/handlers/kills_handlers/: create_kill.rs  get_kill.rs  list_kills.rs  load_kills_from_discord.rs  mod.rs
src/infra/db/: schema.rs
src/infra/repositories/: kill_repository.rs  mod.rs
