[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
actix-web = "4.8.0"
actix-rt = "2.10.0"
