[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
axum-macros = "0.3"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json", "chrono"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
tower = "0.4.13"
reqwest = "0.11"
tower-http = { version = "0.3", features = ["trace"] }
hyper = "1.4.1"
regex = "1.10.5"

[[bin]]
name = "api"
path = "src/main.rs"
